--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <body>
     <!-- <script src="q1.js"></script> -->
     <!-- <script src="q2.js"></script> -->
-    <script src=""></script>
-    <script src=""></script>
-    <script src=""></script>
-    <script src=""></script>
-    <script src=""></script>
-    <script src=""></script>
-    <script src=""></script>
-    <script src=""></script>
+    <!-- <script src="q3.js"></script>
+    <script src="q4.js"></script>
+    <script src="q5.js"></script>
+    <script src="q6.js"></script>
+    <script src="q7.js"></script>
+    <script src="q8.js"></script> -->
+    <script src="q9.js"></script>
+    <script src="q10.js"></script>
     <script src=""></script>
     <script src=""></script>
     <script src=""></script>
